[package]
name = "statusify"
version = "0.0.11"
description = "Discord rich presence configurator"
authors = ["Orphoros <contact@orphoros.com>"]
license = "GPL-3.0"
repository = "https://github.com/Orphoros/Statusify"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "^1", features = ["derive"] }
tauri = { version = "^1", features = [ "system-tray", "window-show", "window-start-dragging", "os-all", "macos-private-api", "fs-read-dir", "fs-read-file", "path-all", "updater", "dialog-message", "shell-open"] }
discord-rich-presence = "0.2.3"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-context-menu = { git = "https://github.com/c2r0b/tauri-plugin-context-menu", branch = "main" }
mimalloc = "^0.1"
log = "0.4.18"
sysinfo = "0.27.7"
time = "0.3.17"
window-vibrancy = "^0.4"
webbrowser = "1"

[profile.release]
panic = "abort"
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true
opt-level = "z"
strip = true

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
